using `glibc' in the "product" field.

Version 2.41.1

Deprecated and removed features, and other changes affecting compatibility:

* The glibc.rtld.execstack now supports a compatibility mode to allow
  programs that require an executable stack through dynamic loaded
  shared libraries.

The following bugs were resolved with this release:

  [31943] _dl_find_object can fail if ld.so contains gaps between load segments
  [32269] RISC-V IFUNC resolver cannot access gp pointer
  [32626] math: math: log10p1f is not correctly rounded
  [32627] math: math: sinhf is not correctly rounded
  [32630] math: math: tanf is not correctly rounded for all rounding
    modes
  [32653] dynamic-link: Review options for improving both security and
    backwards compatibility of glibc 2.41 dlopen / execstack handling
  [32781] Linux: Remove attribute access from sched_getattr
  [32782] nptl: Race conditions in pthread cancellation causing crash
  [32786] nptl: PTHREAD_COND_INITIALIZER compatibility with pre-2.41 versions
  [32810] Crash on x86-64 if XSAVEC disable via tunable
  [32882] tst-audit10 fails with SIGILL on CPUs without AVX
  [32897] dynamic-link: pthread_getattr_np fails when executable stack
    tunable is set
  [32981] ports: elf/tst-execstack-prog-static-tunable fails on
    sparc64-linux-gnu
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [32994] stdlib: resolve a double lock init issue after fork
  [33164] iconv -o should not create executable files
  [33185] Fix double-free after allocation failure in regcomp
  [33245] nptl: nptl: error in internal cancellation syscall handling

Version 2.41

Major new features:

* Support for testing a glibc build with a set of C and C++ compilers
  different from the C and C++ compilers used to build glibc has been
  added:
  $ ../configure TEST_CC="gcc-6.4.1" TEST_CXX="g++-6.4.1"

  This includes support for testing the glibc build with Clang, e.g.,
  $ ../configure TEST_CC="clang" TEST_CXX="clang++"
